Fix article title incorrectly wrap

--- a/source/css/post.styl
+++ b/source/css/post.styl
@@ -31,3 +31,8 @@
     display: none;
   }
 }
+
+.post_title {
+    display:block;
+    word-break:break-all; 
+}
